--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -23,10 +23,21 @@
 .content-overlay {
   position: relative;
   z-index: 1;
-  color: white;
   text-align: center;
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
   padding: 0 20px;
+   background: linear-gradient(
+    to right,
+    #c0c0c0,
+    #e0e0e0,
+    #aaaaaa,
+    #f2f2f2,
+    #999999
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 }
