--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -1,22 +1,44 @@
 .services-section {
   padding: 60px 40px; /* more padding on sides */
-  color: #ffffff;
   text-align: center;
   max-width: 1200px;
   margin: 0 auto; /* center the section */
   font-family: Arial, sans-serif;
+  
 }
 
 .services-section h2 {
   font-size: 2.8rem;
   margin-bottom: 40px; /* more space below */
   font-weight: 700;
-  color: #fff;
   line-height: 1.2;
+   background: linear-gradient(
+    to right,
+    #c0c0c0,
+    #e0e0e0,
+    #aaaaaa,
+    #f2f2f2,
+    #999999
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 }
 
 .services-section h2 span {
-  color: #fff;
+   background: linear-gradient(
+    to right,
+    #c0c0c0,
+    #e0e0e0,
+    #aaaaaa,
+    #f2f2f2,
+    #999999
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 }
 
 .services-tabs {
@@ -41,6 +63,7 @@
 .tab:hover {
   background: #fff;
   color: #000;
+  
 }
 
 .tab.active {
@@ -53,7 +76,18 @@
   margin: 0 auto 60px auto;
   font-size: 1.2rem;
   line-height: 1.5;
-  color: #ddd;
+   background: linear-gradient(
+    to right,
+    #c0c0c0,
+    #e0e0e0,
+    #aaaaaa,
+    #f2f2f2,
+    #999999
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 }
 
 .services-grid {
@@ -87,6 +121,17 @@
   padding: 15px;
   font-weight: 600;
   font-size: 1.2rem;
-  color: #fff;
   text-align: center;
+   background: linear-gradient(
+    to right,
+    #c0c0c0,
+    #e0e0e0,
+    #aaaaaa,
+    #f2f2f2,
+    #999999
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 }
